# School_CRUD

./: .env  Cargo.toml  request.http
examples/: bcrypt.rs  formatting.rs  smtp.rs
src/: lib.rs  main.rs
src/handlers/: auth_handlers.rs  mod.rs  student_handlers.rs
src/models/: auth_model.rs  mod.rs  record_model.rs  student_model.rs
src/routes/: auth_routes.rs  mod.rs  student_route.rs
src/services/: mod.rs  verification_code.rs
src/utils/: api_error.rs  app_state.rs  constants.rs  db_instance.rs  encryption.rs  extractor.rs  guard.rs  jwt.rs  mod.rs
