[package]
name = "school"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.68"
surrealdb = "1.2.0"
axum = { version = "0.7.5"} 
tokio = { version = "1.0", features = ["full"] }

tower-http = { version = "0.5.2", features = ["trace","cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter","json"]} # 
tracing-appender = "0.2.3" # used for saving the trace in a log file

dotenv = "0.15.0"
lazy_static = "1.4.0"
chrono = "0.4.37"

jsonwebtoken = "9.3.0"
bcrypt = "0.15.1"
rayon = "1.10.0"

# For error handling
thiserror = "1.0.59"

validator = { version = "0.16", features = ["derive"] }

# sending email to user email
openssl = { version = "0.10", features = ["vendored"] }
lettre = "0.11.6"
lettre_email = "0.9.4"

rand = "0.8.4"


